[MAIN] Add autofocus to the field on each view; add autofocus to the submit button; ensure the Next button comes first for keyboard users but lives to the right of the Previous button visually; refine the layout and alignment for the first 5 views

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -27,33 +27,54 @@ a {
   align-items: center;
   position: absolute;
   justify-content: center;
+  min-height: 500px;
   width: 100%;
   height: 100%;
   margin: 0;
+  border: 1px solid green;
 }
 
 .input-wrapper {
   display: flex;
   flex-direction: column;
+  height: 100%;
+  padding: 2em;
+}
+
+label {
+  margin-bottom: auto;
+  text-align: center;
+}
+
+input,select {
+  width: 100%;
+  margin: auto;
+  font-size: 2rem;
 }
 
 .showPasswordCheckboxWrapper {
   width: 50%;
-  margin-top: 1em;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
+  min-height: 4rem;
+  max-height: 4rem;
+  margin-bottom: auto;
+  padding: 0;
 }
 
-input,select {
-  margin-top: 1em;
+.showPasswordCheckboxWrapper > input {
+  width: 1.5rem;
+  height: 1.5rem;
+  margin-left: 0;
+}
+
+.showPasswordCheckboxWrapper > label {
   width: 100%;
+  text-align: left;
 }
 
 .nav-links {
   width: 100%;
   display: flex;
-  margin-top: 1em;
+  justify-content: center;
 }
 
 .btn-nav {
@@ -73,12 +94,14 @@ input,select {
 
 .btn-next {
   justify-content: center;
+  order: 2;
 }
 
 .btn-prev {
   justify-content: center;
+  order: 1;
 }
 
 #submit {
-
+  margin: 1em 0;
 }
